apps/base/grafana-shared/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: grafana
spec:
  parentRefs:
  - name: envoy-gw
    namespace: envoy-gateway-system
    sectionName: wahooli-https
  - name: envoy-gw-private
    namespace: envoy-gateway-system
  hostnames:
  - "grafana.${domain_wahoo_li:=wahoo.li}"
  - "grafana.${domain_absolutist_it:=absolutist.it}"
  rules:
  - backendRefs:
    - name: grafana
      port: 80
